samples/_failures_safe/1761299550_a2a316_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99381a00.c: In function ‘main’:
./samples/SAFE/__tmp_99381a00.c:177:50: error: expected ‘)’ at end of input
  177 |     Matrix *result = multiply_matrices(mat1, mat2
      |                                       ~          ^
      |                                                  )
./samples/SAFE/__tmp_99381a00.c:177:5: error: expected declaration or statement at end of input
  177 |     Matrix *result = multiply_matrices(mat1, mat2
      |     ^~~~~~
